Slightly edited look.

--- a/files/themes/greenButtons/jquery-ui.css
+++ b/files/themes/greenButtons/jquery-ui.css
@@ -1,7 +1,7 @@
-/*! jQuery UI - v1.10.1 - 2013-02-20
+/*! jQuery UI - v1.10.1 - 2013-03-08
 * http://jqueryui.com
 * Includes: jquery.ui.core.css, jquery.ui.resizable.css, jquery.ui.autocomplete.css, jquery.ui.button.css, jquery.ui.dialog.css, jquery.ui.menu.css
-* To view and modify this theme, visit http://jqueryui.com/themeroller/?ffDefault=Verdana%2CArial%2Csans-serif&fwDefault=normal&fsDefault=1.1em&cornerRadius=4px&bgColorHeader=%23cccccc&bgTextureHeader=highlight_soft&bgImgOpacityHeader=75&borderColorHeader=%23aaaaaa&fcHeader=%23222222&iconColorHeader=%23222222&bgColorContent=%23ffffff&bgTextureContent=flat&bgImgOpacityContent=75&borderColorContent=%23aaaaaa&fcContent=%23222222&iconColorContent=%23222222&bgColorDefault=%23C7E1BA&bgTextureDefault=glass&bgImgOpacityDefault=75&borderColorDefault=%23d3d3d3&fcDefault=%23555555&iconColorDefault=%23888888&bgColorHover=%23a1d08a&bgTextureHover=glass&bgImgOpacityHover=75&borderColorHover=%23999999&fcHover=%23212121&iconColorHover=%23454545&bgColorActive=%23ffffff&bgTextureActive=glass&bgImgOpacityActive=65&borderColorActive=%23aaaaaa&fcActive=%23212121&iconColorActive=%23454545&bgColorHighlight=%23fbf9ee&bgTextureHighlight=glass&bgImgOpacityHighlight=55&borderColorHighlight=%23fcefa1&fcHighlight=%23363636&iconColorHighlight=%232e83ff&bgColorError=%23fef1ec&bgTextureError=glass&bgImgOpacityError=95&borderColorError=%23cd0a0a&fcError=%23cd0a0a&iconColorError=%23cd0a0a&bgColorOverlay=%23aaaaaa&bgTextureOverlay=flat&bgImgOpacityOverlay=0&opacityOverlay=30&bgColorShadow=%23aaaaaa&bgTextureShadow=flat&bgImgOpacityShadow=0&opacityShadow=30&thicknessShadow=8px&offsetTopShadow=-8px&offsetLeftShadow=-8px&cornerRadiusShadow=8px
+* To view and modify this theme, visit http://jqueryui.com/themeroller/?ffDefault=Lucida%20Grande%2CLucida%20Sans%2CArial%2Csans-serif&fwDefault=normal&fsDefault=1.1em&cornerRadius=10px&bgColorHeader=3a8104&bgTextureHeader=highlight_soft&bgImgOpacityHeader=33&borderColorHeader=3f7506&fcHeader=ffffff&iconColorHeader=ffffff&bgColorContent=285c00&bgTextureContent=inset_soft&bgImgOpacityContent=10&borderColorContent=72b42d&fcContent=ffffff&iconColorContent=72b42d&bgColorDefault=4ca20b&bgTextureDefault=highlight_soft&bgImgOpacityDefault=60&borderColorDefault=45930b&fcDefault=ffffff&iconColorDefault=ffffff&bgColorHover=4eb305&bgTextureHover=highlight_soft&bgImgOpacityHover=50&borderColorHover=8bd83b&fcHover=ffffff&iconColorHover=ffffff&bgColorActive=285c00&bgTextureActive=highlight_hard&bgImgOpacityActive=30&borderColorActive=72b42d&fcActive=ffffff&iconColorActive=ffffff&bgColorHighlight=fbf5d0&bgTextureHighlight=glass&bgImgOpacityHighlight=55&borderColorHighlight=f9dd34&fcHighlight=363636&iconColorHighlight=4eb305&bgColorError=ffdc2e&bgTextureError=diagonals_thick&bgImgOpacityError=95&borderColorError=fad000&fcError=2b2b2b&iconColorError=cd0a0a&bgColorOverlay=444444&bgTextureOverlay=diagonals_thick&bgImgOpacityOverlay=15&opacityOverlay=30&bgColorShadow=aaaaaa&bgTextureShadow=diagonals_small&bgImgOpacityShadow=0&opacityShadow=30&thicknessShadow=0px&offsetTopShadow=4px&offsetLeftShadow=4px&cornerRadiusShadow=4px
 * Copyright (c) 2013 jQuery Foundation and other contributors Licensed MIT */
 
 /* Layout helpers
@@ -394,7 +394,7 @@ button.ui-button::-moz-focus-inner {
 /* Component containers
 ----------------------------------*/
 greenButtons .ui-widget {
-	font-family: Verdana,Arial,sans-serif;
+	font-family: Lucida Grande,Lucida Sans,Arial,sans-serif;
 	font-size: 1.1em;
 }
 greenButtons .ui-widget .ui-widget {
@@ -404,25 +404,25 @@ greenButtons .ui-widget input,
 greenButtons .ui-widget select,
 greenButtons .ui-widget textarea,
 greenButtons .ui-widget button {
-	font-family: Verdana,Arial,sans-serif;
+	font-family: Lucida Grande,Lucida Sans,Arial,sans-serif;
 	font-size: 1em;
 }
 greenButtons .ui-widget-content {
-	border: 1px solid #aaaaaa;
-	background: #ffffff url(images/ui-bg_flat_75_ffffff_40x100.png) 50% 50% repeat-x;
-	color: #222222;
+	border: 1px solid #72b42d;
+	background: #285c00 url(images/ui-bg_inset-soft_10_285c00_1x100.png) 50% bottom repeat-x;
+	color: #ffffff;
 }
 greenButtons .ui-widget-content a {
-	color: #222222;
+	color: #ffffff;
 }
 greenButtons .ui-widget-header {
-	border: 1px solid #aaaaaa;
-	background: #cccccc url(images/ui-bg_highlight-soft_75_cccccc_1x100.png) 50% 50% repeat-x;
-	color: #222222;
+	border: 1px solid #3f7506;
+	background: #3a8104 url(images/ui-bg_highlight-soft_33_3a8104_1x100.png) 50% 50% repeat-x;
+	color: #ffffff;
 	font-weight: bold;
 }
 greenButtons .ui-widget-header a {
-	color: #222222;
+	color: #ffffff;
 }
 
 /* Interaction states
@@ -430,15 +430,15 @@ greenButtons .ui-widget-header a {
 greenButtons .ui-state-default,
 greenButtons .ui-widget-content .ui-state-default,
 greenButtons .ui-widget-header .ui-state-default {
-	border: 1px solid #d3d3d3;
-	background: #C7E1BA url(images/ui-bg_glass_75_C7E1BA_1x400.png) 50% 50% repeat-x;
+	border: 1px solid #45930b;
+	background: #4ca20b url(images/ui-bg_highlight-soft_60_4ca20b_1x100.png) 50% 50% repeat-x;
 	font-weight: normal;
-	color: #555555;
+	color: #ffffff;
 }
 greenButtons .ui-state-default a,
 greenButtons .ui-state-default a:link,
 greenButtons .ui-state-default a:visited {
-	color: #555555;
+	color: #ffffff;
 	text-decoration: none;
 }
 greenButtons .ui-state-hover,
@@ -447,30 +447,30 @@ greenButtons .ui-widget-header .ui-state-hover,
 greenButtons .ui-state-focus,
 greenButtons .ui-widget-content .ui-state-focus,
 greenButtons .ui-widget-header .ui-state-focus {
-	border: 1px solid #999999;
-	background: #a1d08a url(images/ui-bg_glass_75_a1d08a_1x400.png) 50% 50% repeat-x;
+	border: 1px solid #8bd83b;
+	background: #4eb305 url(images/ui-bg_highlight-soft_50_4eb305_1x100.png) 50% 50% repeat-x;
 	font-weight: normal;
-	color: #212121;
+	color: #ffffff;
 }
 greenButtons .ui-state-hover a,
 greenButtons .ui-state-hover a:hover,
 greenButtons .ui-state-hover a:link,
 greenButtons .ui-state-hover a:visited {
-	color: #212121;
+	color: #ffffff;
 	text-decoration: none;
 }
 greenButtons .ui-state-active,
 greenButtons .ui-widget-content .ui-state-active,
 greenButtons .ui-widget-header .ui-state-active {
-	border: 1px solid #aaaaaa;
-	background: #ffffff url(images/ui-bg_glass_65_ffffff_1x400.png) 50% 50% repeat-x;
+	border: 1px solid #72b42d;
+	background: #285c00 url(images/ui-bg_highlight-hard_30_285c00_1x100.png) 50% 50% repeat-x;
 	font-weight: normal;
-	color: #212121;
+	color: #ffffff;
 }
 greenButtons .ui-state-active a,
 greenButtons .ui-state-active a:link,
 greenButtons .ui-state-active a:visited {
-	color: #212121;
+	color: #ffffff;
 	text-decoration: none;
 }
 
@@ -479,8 +479,8 @@ greenButtons .ui-state-active a:visited {
 greenButtons .ui-state-highlight,
 greenButtons .ui-widget-content .ui-state-highlight,
 greenButtons .ui-widget-header .ui-state-highlight {
-	border: 1px solid #fcefa1;
-	background: #fbf9ee url(images/ui-bg_glass_55_fbf9ee_1x400.png) 50% 50% repeat-x;
+	border: 1px solid #f9dd34;
+	background: #fbf5d0 url(images/ui-bg_glass_55_fbf5d0_1x400.png) 50% 50% repeat-x;
 	color: #363636;
 }
 greenButtons .ui-state-highlight a,
@@ -491,19 +491,19 @@ greenButtons .ui-widget-header .ui-state-highlight a {
 greenButtons .ui-state-error,
 greenButtons .ui-widget-content .ui-state-error,
 greenButtons .ui-widget-header .ui-state-error {
-	border: 1px solid #cd0a0a;
-	background: #fef1ec url(images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x;
-	color: #cd0a0a;
+	border: 1px solid #fad000;
+	background: #ffdc2e url(images/ui-bg_diagonals-thick_95_ffdc2e_40x40.png) 50% 50% repeat;
+	color: #2b2b2b;
 }
 greenButtons .ui-state-error a,
 greenButtons .ui-widget-content .ui-state-error a,
 greenButtons .ui-widget-header .ui-state-error a {
-	color: #cd0a0a;
+	color: #2b2b2b;
 }
 greenButtons .ui-state-error-text,
 greenButtons .ui-widget-content .ui-state-error-text,
 greenButtons .ui-widget-header .ui-state-error-text {
-	color: #cd0a0a;
+	color: #2b2b2b;
 }
 greenButtons .ui-priority-primary,
 greenButtons .ui-widget-content .ui-priority-primary,
@@ -539,23 +539,23 @@ greenButtons .ui-icon {
 }
 greenButtons .ui-icon,
 greenButtons .ui-widget-content .ui-icon {
-	background-image: url(images/ui-icons_222222_256x240.png);
+	background-image: url(images/ui-icons_72b42d_256x240.png);
 }
 greenButtons .ui-widget-header .ui-icon {
-	background-image: url(images/ui-icons_222222_256x240.png);
+	background-image: url(images/ui-icons_ffffff_256x240.png);
 }
 greenButtons .ui-state-default .ui-icon {
-	background-image: url(images/ui-icons_888888_256x240.png);
+	background-image: url(images/ui-icons_ffffff_256x240.png);
 }
 greenButtons .ui-state-hover .ui-icon,
 greenButtons .ui-state-focus .ui-icon {
-	background-image: url(images/ui-icons_454545_256x240.png);
+	background-image: url(images/ui-icons_ffffff_256x240.png);
 }
 greenButtons .ui-state-active .ui-icon {
-	background-image: url(images/ui-icons_454545_256x240.png);
+	background-image: url(images/ui-icons_ffffff_256x240.png);
 }
 greenButtons .ui-state-highlight .ui-icon {
-	background-image: url(images/ui-icons_2e83ff_256x240.png);
+	background-image: url(images/ui-icons_4eb305_256x240.png);
 }
 greenButtons .ui-state-error .ui-icon,
 greenButtons .ui-state-error-text .ui-icon {
@@ -748,38 +748,38 @@ greenButtons .ui-corner-all,
 greenButtons .ui-corner-top,
 greenButtons .ui-corner-left,
 greenButtons .ui-corner-tl {
-	border-top-left-radius: 4px;
+	border-top-left-radius: 10px;
 }
 greenButtons .ui-corner-all,
 greenButtons .ui-corner-top,
 greenButtons .ui-corner-right,
 greenButtons .ui-corner-tr {
-	border-top-right-radius: 4px;
+	border-top-right-radius: 10px;
 }
 greenButtons .ui-corner-all,
 greenButtons .ui-corner-bottom,
 greenButtons .ui-corner-left,
 greenButtons .ui-corner-bl {
-	border-bottom-left-radius: 4px;
+	border-bottom-left-radius: 10px;
 }
 greenButtons .ui-corner-all,
 greenButtons .ui-corner-bottom,
 greenButtons .ui-corner-right,
 greenButtons .ui-corner-br {
-	border-bottom-right-radius: 4px;
+	border-bottom-right-radius: 10px;
 }
 
 /* Overlays */
 greenButtons .ui-widget-overlay {
-	background: #aaaaaa url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x;
+	background: #444444 url(images/ui-bg_diagonals-thick_15_444444_40x40.png) 50% 50% repeat;
 	opacity: .3;
 	filter: Alpha(Opacity=30);
 }
 greenButtons .ui-widget-shadow {
-	margin: -8px 0 0 -8px;
-	padding: 8px;
-	background: #aaaaaa url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x;
+	margin: 4px 0 0 4px;
+	padding: 0px;
+	background: #aaaaaa url(images/ui-bg_diagonals-small_0_aaaaaa_40x40.png) 50% 50% repeat;
 	opacity: .3;
 	filter: Alpha(Opacity=30);
-	border-radius: 8px;
+	border-radius: 4px;
 }
