--- a/files/css/isotopeScript.edited.css
+++ b/files/css/isotopeScript.edited.css
@@ -94,7 +94,7 @@ body {
   font-size: 13px;
   line-height: 1.7em;
   /*background: #1F1E1D;*/
-  background: #9CB770;
+  /*background: #9CB770;*/
   color: #FFF;
 }
 
